[gd_scene load_steps=5 format=3 uid="uid://divri6llse1p5"]

[ext_resource type="Script" uid="uid://bnb3j6xqyt04t" path="res://scene/inventory/ItemTooltip.gd" id="1_cmmmc"]
[ext_resource type="Script" uid="uid://cpk066rrkyd5c" path="res://scene/inventory/CardsPreview.gd" id="2_ibsec"]
[ext_resource type="PackedScene" uid="uid://3trgkf0u68ry" path="res://scene/card/card.tscn" id="3_31ooq"]

[sub_resource type="LabelSettings" id="LabelSettings_cmmmc"]
font_size = 18
font_color = Color(0, 0, 0, 1)

[node name="ItemTooltip" type="Panel"]
z_index = 1000
anchors_preset = -1
anchor_right = 0.352
anchor_bottom = 0.25
offset_right = -0.560028
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_cmmmc")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
color = Color(0.260671, 0.594883, 0.879988, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="CardsPreview" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
size_flags_stretch_ratio = 3.96
mouse_filter = 2
alignment = 1
script = ExtResource("2_ibsec")
card_scene = ExtResource("3_31ooq")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Tooltip 
"
label_settings = SubResource("LabelSettings_cmmmc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer5" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="TypeLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="Description" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 23)
layout_mode = 2
text = "desc"
horizontal_alignment = 1
autowrap_mode = 2

[node name="MarginContainer6" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
